Fix the button out of container bug. Add backup resources for disable geolocation. Add google Analytics api.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,7 +74,7 @@ article.post {
 }
 
 #weather-icon{
-    max-width: 60px;
+    max-width: 90px;
     max-height: 70px;
     display: block;
     margin-left: auto;
